--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li><a href="#hero">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#work-experience">Work</a></li>
-                        <li><a href="#projects">Highlights</a></li>
+                        <!-- <li><a href="#projects">Highlights</a></li> -->
                         <li><a href="#highlights">Media</a></li>
                         <li><a href="#get-in-touch">Contact</a></li>
                     </ul>
@@ -77,17 +77,24 @@
                             <a class="btn outline"
                                 href="https://www.linkedin.com/in/tessa-maria/">My
                                 LinkedIn</a>
-                            <a class="btn outline" href="#projects">See
-                                projects</a>
-                            <a class="btn ghost"
+                            <!-- <a class="btn outline" href="#projects">See
+                                projects</a> -->
+                            <a class="btn outline"
                                 href="./assets/Tessa_Maria_Resume.pdf"
                                 download>Download CV</a>
                         </div>
 
                         <ul class="highlights-inline">
-                            <li><strong>Goal Oriented</strong></li>
+                            <li><strong>Strategic Planning</strong></li>
                             <li><strong>Creative Thinking</strong></li>
                             <li><strong>Market Research</strong></li>
+                            <li><strong>Proactive</strong></li>
+                        </ul>
+                        <ul class="highlights-inline">
+                            <li><strong>Data Driven</strong></li>
+                            <li><strong>Team Collaboration</strong></li>
+                            <li><strong>Adaptable</strong></li>
+                            <li><strong>Detail Oriented</strong></li>
                         </ul>
                     </div>
                 </div>
@@ -255,7 +262,7 @@
             </section>
 
             <!-- PROJECTS (Master's projects indicated) -->
-            <section id="projects" class="panel soft-panel">
+            <!-- <section id="projects" class="panel soft-panel">
                 <div class="container">
                     <h2 class="section-title reveal">Highlights</h2>
 
@@ -277,12 +284,12 @@
                         </article>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- HIGHLIGHTS & MEDIA (LinkedIn + Instagram embeds) -->
             <section id="highlights" class="panel">
                 <div class="container">
-                    <!-- <h2 class="section-title reveal">Media</h2> -->
+                    <h2 class="section-title reveal">Media</h2>
 
                     <div class="media-grid">
                         <div class="media-card card reveal">
@@ -307,10 +314,22 @@
                             </div>
                         </div>
                         <div class="media-card card reveal">
-                             <h3>Representing SwaraVOW at BIC, organised by Art and Flea Project</h3>
+                            <h3>Representing SwaraVOW at BIC, organised by Art
+                                and Flea Project</h3>
                             <div class="embed-wrapper">
                                 <blockquote class="instagram-media"
                                     data-instgrm-permalink="https://www.instagram.com/reel/CloI-0eDoKk/?utm_source=ig_embed&amp;utm_campaign=loading"
+                                    data-instgrm-version="14"
+                                    style="background:#FFF; border:0; margin:0; max-width:540px; padding:0; width:100%;">
+                                </blockquote>
+                            </div>
+                        </div>
+                        <div class="media-card card reveal">
+                            <h3>Copy for post on International Men’s Mental
+                                Health Day</h3>
+                            <div class="embed-wrapper">
+                                <blockquote class="instagram-media"
+                                    data-instgrm-permalink="https://www.instagram.com/p/CHxJCleppC1/?utm_source=ig_web_button_share_sheet"
                                     data-instgrm-version="14"
                                     style="background:#FFF; border:0; margin:0; max-width:540px; padding:0; width:100%;">
                                 </blockquote>
@@ -329,11 +348,8 @@
                             <h3>Prefer email?</h3>
                             <p>Email: <a
                                     href="mailto:tessamariasams@gmail.com">tessamariasams@gmail.com</a></p>
-                            <p>Based in: Milan, Italy — open to in office & 
+                            <p>Based in: Milan, Italy - open to in office &
                                 hybrid roles.</p>
-                            <p class="muted">If you ask for references, I’ll
-                                selectively embarrass myself by sending lovely
-                                quotes.</p>
                             <a class="btn primary"
                                 href="mailto:tessamariasams@gmail.com">Email
                                 me</a>
