final-ish innit

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                             Growth · Customer Relations Expert</p>
 
                         <p class="hero-body">
-                            Let’s cut to the chase, what do I bring to the
-                            table?
+                            <strong>Let’s cut to the chase, what do I bring to the
+                            table?</strong>
 
                             An open mind with an international perspective and
                             3+ years of experience in marketing, customer
@@ -156,7 +156,7 @@
                                 channels.
                                 •⁠ ⁠Trained new team members on standard
                                 operating procedures and team workflows.
-                                •⁠ ⁠Led the team briefly and regularly
+                                •⁠ ⁠Led the team and regularly
                                 communicated with the CEO regarding urgent
                                 matters and customer preferences.
                                 •⁠ ⁠Collaborated cross-functionally with other
@@ -326,7 +326,7 @@
                         </div>
                         <div class="media-card card reveal">
                             <h3>Copy for post on International Men’s Mental
-                                Health Day</h3>
+                                Health Day, YellowClub</h3>
                             <div class="embed-wrapper">
                                 <blockquote class="instagram-media"
                                     data-instgrm-permalink="https://www.instagram.com/p/CHxJCleppC1/?utm_source=ig_web_button_share_sheet"
@@ -342,7 +342,7 @@
             <!-- CONTACT -->
             <section id="get-in-touch" class="panel soft-panel">
                 <div class="container">
-                    <h2 class="section-title reveal">Get in touch</h2>
+                    <h1 style="font-size: xx-large;" class="section-title reveal">Get in touch</h1>
                     <div class="contact-grid">
                         <div class="card reveal">
                             <h3>Prefer email?</h3>
