added slider for media, and responsiveness

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#work-experience">Work</a></li>
                         <!-- <li><a href="#projects">Highlights</a></li> -->
+                         <!-- <li><a href="blog.html">Blog</a></li> -->
                         <li><a href="#highlights">Media</a></li>
                         <li><a href="#get-in-touch">Contact</a></li>
                     </ul>
@@ -287,19 +288,19 @@
             </section> -->
 
             <!-- HIGHLIGHTS & MEDIA (LinkedIn + Instagram embeds) -->
-            <section id="highlights" class="panel">
-                <div class="container">
-                    <h2 class="section-title reveal">Media</h2>
-
-                    <div class="media-grid">
+            <!-- MEDIA SECTION WITH SLIDER -->
+    <section id="highlights" class="panel">
+        <div class="container">
+            <h2 class="section-title reveal">Media</h2>
+            <div class="slider-container">
+                <button class="slider-btn prev">&#10094;</button>
+                <div class="slider-wrapper">
+                    <div class="slider">
                         <div class="media-card card reveal">
                             <h3>Clan Campbell Client Pitch</h3>
                             <div class="embed-wrapper">
-                                <iframe
-                                    src="https://www.linkedin.com/embed/feed/update/urn:li:share:7331235055824011265?collapsed=1"
-                                    height="549" width="480" frameborder="0"
-                                    allowfullscreen
-                                    title="LinkedIn embed"></iframe>
+                                <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7331235055824011265?collapsed=1"
+                                        height="549" width="480" frameborder="0" allowfullscreen title="LinkedIn embed"></iframe>
                             </div>
                         </div>
 
@@ -307,37 +308,34 @@
                             <h3>SwaraVOW at Olam Fest, Trivandrum</h3>
                             <div class="embed-wrapper">
                                 <blockquote class="instagram-media"
-                                    data-instgrm-permalink="https://www.instagram.com/reel/CoQH2MlOpXz/?utm_source=ig_embed&amp;utm_campaign=loading"
-                                    data-instgrm-version="14"
-                                    style="background:#FFF; border:0; margin:0; max-width:540px; padding:0; width:100%;">
-                                </blockquote>
+                                            data-instgrm-permalink="https://www.instagram.com/reel/CoQH2MlOpXz/?utm_source=ig_embed&amp;utm_campaign=loading"
+                                            data-instgrm-version="14"></blockquote>
                             </div>
                         </div>
+
                         <div class="media-card card reveal">
-                            <h3>Representing SwaraVOW at BIC, organised by Art
-                                and Flea Project</h3>
+                            <h3>Representing SwaraVOW at BIC, organised by Art and Flea Project</h3>
                             <div class="embed-wrapper">
                                 <blockquote class="instagram-media"
-                                    data-instgrm-permalink="https://www.instagram.com/reel/CloI-0eDoKk/?utm_source=ig_embed&amp;utm_campaign=loading"
-                                    data-instgrm-version="14"
-                                    style="background:#FFF; border:0; margin:0; max-width:540px; padding:0; width:100%;">
-                                </blockquote>
+                                            data-instgrm-permalink="https://www.instagram.com/reel/CloI-0eDoKk/?utm_source=ig_embed&amp;utm_campaign=loading"
+                                            data-instgrm-version="14"></blockquote>
                             </div>
                         </div>
+
                         <div class="media-card card reveal">
-                            <h3>Copy for post on International Men’s Mental
-                                Health Day, YellowClub</h3>
+                            <h3>Copy for post on International Men’s Mental Health Day, YellowClub</h3>
                             <div class="embed-wrapper">
                                 <blockquote class="instagram-media"
-                                    data-instgrm-permalink="https://www.instagram.com/p/CHxJCleppC1/?utm_source=ig_web_button_share_sheet"
-                                    data-instgrm-version="14"
-                                    style="background:#FFF; border:0; margin:0; max-width:540px; padding:0; width:100%;">
-                                </blockquote>
+                                            data-instgrm-permalink="https://www.instagram.com/p/CHxJCleppC1/?utm_source=ig_web_button_share_sheet"
+                                            data-instgrm-version="14"></blockquote>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+                <button class="slider-btn next">&#10095;</button>
+            </div>
+        </div>
+    </section>
 
             <!-- CONTACT -->
             <section id="get-in-touch" class="panel soft-panel">
