added portfolio page with assests

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#work-experience">Work</a></li>
                         <!-- <li><a href="#projects">Highlights</a></li> -->
-                         <!-- <li><a href="blog.html">Blog</a></li> -->
+                         <li><a href="blog.html">My Portfolio</a></li>
                         <li><a href="#highlights">Media</a></li>
                         <li><a href="#get-in-touch">Contact</a></li>
                     </ul>
