--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Tessa Maria - Blog</title>
+  <title>Tessa - Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="blog.html" aria-current="page">Blog</a></li>
+        <li><a href="blog.html" aria-current="page">My Portfolio</a></li>
         <li><a href="index.html#get-in-touch">Contact</a></li>
       </ul>
     </nav>
@@ -28,21 +28,29 @@
 
 <main class="panel soft-panel">
   <div class="container">
-    <h1 class="section-title">Blog</h1>
+    <h1 class="section-title">Portfolio</h1>
 
-    <article class="card reveal">
-      <h2>Finding Meaning in Marketing</h2>
-      <p class="meta">June 10, 2025 · <span class="tag">Brand Strategy</span> <span class="tag">Marketing</span></p>
-      <p>Marketing, to me, isn’t about selling — it’s about storytelling. It’s about connecting with people through emotions, not just visuals and metrics. As someone who’s worked closely with purpose-driven brands, I’ve learned that authenticity always cuts through the noise. When you prioritise the audience’s lived experiences, creative decisions become clearer and more impactful.</p>
-    </article>
+    <!-- Portfolio Tabs -->
+    <div class="portfolio-tabs">
+      <button class="tab-button active" data-index="0">Clan Campbell (Stock) Christmas Campaign</button>
+      <button class="tab-button" data-index="1">Fidenza Village, Bicester Collection</button>
+    </div>
 
-    <article class="card reveal">
-      <h2>The Power of Listening</h2>
-      <p class="meta">May 28, 2025 · <span class="tag">Communication</span> <span class="tag">Growth</span></p>
-      <p>Listening is an underrated skill in every field — whether you’re leading a team, developing a brand, or just engaging with a customer. It’s what helps bridge gaps and build relationships that last. A quick check-in, a note of appreciation, or actually acting on feedback can change how people feel about a brand overnight.</p>
-    </article>
+    <!-- Portfolio Slider -->
+    <div class="portfolio-slider">
+      <div class="slider-track">
+        <div class="slide">
+          <embed src="assets/pcc.pdf" type="application/pdf" class="pdf-viewer">
+          <a href="assets/pcc.pdf" download class="download-btn">Download Clan Campbell Christmas Campaign</a>
+        </div>
+        <div class="slide">
+          <embed src="assets/pfv.pdf" type="application/pdf" class="pdf-viewer">
+          <a href="assets/pfv.pdf" download class="download-btn">Download Fidenza Village, Bicester Collection</a>
+        </div>
+      </div>
+    </div>
 
-    <section class="card reveal" id="contact-end" style="margin-top:18px;">
+    <section class="card reveal" id="contact-end" style="margin-top: 32px;">
       <h3>Let’s chat</h3>
       <p>If you’d like to talk about these topics — or just have a chat — feel free to <a href="mailto:tessamariasams@gmail.com">reach out via email</a>.</p>
     </section>
